Finally got the font working & worked out a few spacing issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -144,8 +144,6 @@ nav {
   nav ul li {
     display: inline;
     font-size: 18px;
-    font-family: "Reader Bold";
-    font-weight: 600;
     margin-left: 35px;
   }
 
@@ -153,7 +151,7 @@ nav {
       color: #fff;
       text-decoration: none;
       &.button {
-        padding: 10px 44px 6px;
+        padding: 8px 44px 6px;
       }
     }
 
@@ -207,7 +205,6 @@ nav {
   .founder-profile h4 {
     font-size: 16px;
     font-family: "Reader Medium";
-    font-weight: 500;
     margin-bottom: 5px;
   }
 
@@ -215,7 +212,6 @@ nav {
     background: url(social-medium.png) no-repeat center left;
     font-size: 14px;
     font-family: "Reader Medium";
-    font-weight: 500;
     padding: 3px 0 0 0;
     margin-bottom: 10px;
   }
@@ -322,7 +318,6 @@ footer {
     li {
       font-size: 16px;
       font-family: "Reader Medium";
-      font-weight: 500;
       margin-left: 25px;
       a {
         opacity: .6;
